test(sentiment-provider): Update unit tests
- Update the unit test to expect the correct exception type